<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/AuthEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/AuthEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/roboto_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:gravity="center"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/light_green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegister" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/slate_grey"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <LinearLayout
        android:id="@+id/socialContainer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <ImageButton
            android:id="@+id/btnVk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="#2683ED"
            android:contentDescription="@string/vk"
            android:scaleType="center"
            android:src="@drawable/ic_vk" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_ok_gradient"
            android:clickable="true"
            android:contentDescription="@string/ok"
            android:focusable="true"
            android:padding="0dp"
            android:scaleType="center"
            android:src="@drawable/ic_ok" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>