<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/dark_grey"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="236dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/courseImage"
            android:layout_width="0dp"
            android:layout_height="114dp"
            android:contentDescription="@string/course_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/image_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <ImageButton
            android:id="@+id/btnBookmark"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_glass_blur"
            android:contentDescription="@string/favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_bookmark" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_glass_blur"
            android:backgroundTint="#80000000"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/courseImage"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="4.9" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_glass_blur"
            android:backgroundTint="#80000000"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tvRate"
            app:layout_constraintStart_toEndOf="@id/tvRate"
            app:layout_constraintTop_toTopOf="@id/tvRate"
            tools:text="22 Мая 2024" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoContainer"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseImage">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Java-разработчик с нуля" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="2"
                android:textColor="@color/neutral_grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="Освойте backend-разработку и программирование на Java, фреймворки..." />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="999 ₽" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnDetailsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/btnDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_semi_bold"
                    android:includeFontPadding="false"
                    android:text="@string/more_details"
                    android:textColor="@color/light_green"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/more_details"
                    android:src="@drawable/ic_arrow_right_short_fill"
                    app:layout_constraintBottom_toBottomOf="@id/btnDetails"
                    app:layout_constraintStart_toEndOf="@id/btnDetails"
                    app:layout_constraintTop_toTopOf="@id/btnDetails" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>